# plugy

./: Cargo.toml  README.md
.github/workflows/: build.yml
crates/plugy-core/: Cargo.toml
crates/plugy-core/src/: bitwise.rs  codec.rs  guest.rs  lib.rs
crates/plugy-macros/: Cargo.toml
crates/plugy-macros/src/: lib.rs
crates/plugy-runtime/: Cargo.toml
crates/plugy-runtime/src/: lib.rs
examples/: README.md
examples/foo-plugin/: Cargo.toml
examples/foo-plugin/src/: lib.rs
examples/runner/: Cargo.toml
examples/runner/src/: lib.rs  main.rs
examples/shared/: Cargo.toml
examples/shared/src/: lib.rs
src/: lib.rs
