[package]
name = "plugy-core"
description = "plugy empowers you to construct agnostic dynamic plugin systems using Rust and WASM"
version = "0.2.1"
edition = "2021"
readme = "../../README.md"
categories = ["wasm"]
keywords = ["plugin", "wasi", "inventory", "wasm", "plugy"]
license = "GPL-3.0-only"
repository = "https://github.com/geofmureithi/plugy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1.3.3"
anyhow = "1"