[package]
name = "plugy-macros"
version = "0.1.0"
edition = "2021"
readme = "../../README.md"
categories = ["wasm", "plugin", "wasi", "inventory"]
license = "GPL-3.0-only"
repository = "https://github.com/geofmureithi/plugy"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { features = ["full", "parsing"], version = "2.0" }
proc-macro2 = "1"
darling = "0.20.1"