[package]
name = "plugy-macros"
description = "plugy empowers you to construct agnostic dynamic plugin systems using Rust and WASM"
version = "0.2.1"
edition = "2021"
readme = "../../README.md"
categories = ["wasm"]
keywords = ["plugin", "wasi", "inventory", "wasm", "plugy"]
license = "GPL-3.0-only"
repository = "https://github.com/geofmureithi/plugy"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { features = ["full", "parsing"], version = "2.0" }
proc-macro2 = "1"
darling = "0.20.1"