[package]
name = "plugy-macros"
description = "plugy empowers you to construct agnostic dynamic plugin systems using Rust and WASM"
version = "0.3.1"
edition = "2021"
readme = "../../README.md"
categories = ["wasm"]
keywords = ["plugin", "wasi", "inventory", "wasm", "plugy"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/geofmureithi/plugy"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.36"
syn = { features = ["full", "parsing"], version = "2.0" }
proc-macro2 = "1"
darling = "0.20.8"
convert_case = "0.6.0"