[package]
name = "plugy-runtime"
description = "plugy empowers you to construct agnostic dynamic plugin systems using Rust and WASM"
version = "0.1.1"
edition = "2021"
readme = "../../README.md"
categories = ["wasm"]
keywords = ["plugin", "wasi", "inventory", "wasm", "plugy"]
license = "GPL-3.0-only"
repository = "https://github.com/geofmureithi/plugy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bincode = "1.3.3"
dashmap = "5.4.0"
plugy-core = { path = "../plugy-core", version = "0.1.0"}
serde = { version = "1", features = ["derive"] }
wasmtime = "10.0.1"
async-lock = "2.7.0"

[dev-dependencies]
plugy-macros = { path = "../plugy-macros" }
plugy = { path = "../../" }

