[package]
name = "plugy-runtime"
description = "plugy empowers you to construct agnostic dynamic plugin systems using Rust and WASM"
version = "0.3.1"
edition = "2021"
readme = "../../README.md"
categories = ["wasm"]
keywords = ["plugin", "wasi", "inventory", "wasm", "plugy"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/geofmureithi/plugy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bincode = "1.3.3"
dashmap = "6.0.0"
plugy-core = { path = "../plugy-core", version = "0.3.1" }
serde = { version = "1", features = ["derive"] }
wasmtime = "25.0.0"
async-lock = "3.3.0"

[dev-dependencies]
plugy-macros = { path = "../plugy-macros" }
plugy = { path = "../../", features = ["runtime"] }
