[package]
name = "foo-plugin"
version = "0.3.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plugy = { path = "../.." }
runner = { path = "../../examples/runner" }
serde = { version = "1", features = ["derive"] }
rmpv = "1"
